# NekoShelf

./: .gitignore  README.md  bootstrap.py  main.py  pyproject.toml
.github/workflows/: ci.yml
core/: api.py  cli.py  cli_commands_download.py  cli_commands_export.py  cli_commands_import.py  cli_commands_library.py  cli_commands_manage.py  cli_commands_query.py  cli_commands_system.py  config.py  database.py  download_manager.py  download_service.py  file_manager.py  import_engine.py  utils.py
core/commands/: __init__.py  download.py  export.py  import_.py  library.py  manage.py  query.py  system.py
core/download_plugins/: __init__.py  common.py  kemono.py  pixiv.py
core/plugins/: __init__.py
core/plugins/download/: __init__.py  base.py  common.py  kemono.py  pixiv.py  utils.py
docs/: usage.md
tests/: test_clean_integrity.py  test_database.py  test_kemono_dedup.py  test_naming_normalize.py  test_utils.py
