[project]
name = "nekoshelf"
version = "1.2.0"
description = "A moe-styled local library management system with downloader plugins."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Master", email = "master@example.com"}
]
dependencies = [
    "requests>=2.28.0",
    "tqdm>=4.65.0",
    "Pillow>=9.5.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "mypy",
    "pytest",
]

[project.scripts]
nekoshelf = "main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.black]
line-length = 100
target-version = ['py38']
